--- a/main.ui
+++ b/main.ui
@@ -34,6 +34,13 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="chang">
+       <property name="text">
+        <string>Изменить кофики</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
